--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -52,17 +52,17 @@ android {
     signingConfigs {
         debug {
             storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
+            storePassword "H9EHax77ZVWWyb"
+            keyAlias "SeniorZhai"
+            keyPassword "H9EHax77ZVWWyb"
             v2SigningEnabled false
         }
 
         release {
             storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
+            storePassword "H9EHax77ZVWWyb"
+            keyAlias "SeniorZhai"
+            keyPassword "H9EHax77ZVWWyb"
             v2SigningEnabled false
         }
     }
