--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -42,17 +42,17 @@ android {
     signingConfigs {
         debug {
             storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
+            storePassword "H9EHax77ZVWWyb"
+            keyAlias "SeniorZhai"
+            keyPassword "H9EHax77ZVWWyb"
             v2SigningEnabled false
         }
 
         release {
             storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
+            storePassword "H9EHax77ZVWWyb"
+            keyAlias "SeniorZhai"
+            keyPassword "H9EHax77ZVWWyb"
             v2SigningEnabled false
         }
     }
@@ -81,7 +81,6 @@ android {
     }
 
     defaultConfig.versionCode = 851
-
     sourceSets.debug {
         manifest.srcFile 'config/debug/AndroidManifest.xml'
     }
