--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
 
     useLibrary 'org.apache.http.legacy'
@@ -92,6 +92,7 @@ android {
     }
 
     defaultConfig.versionCode = 1155
+    defaultConfig.multiDexEnabled = true
 
     sourceSets.debug {
         manifest.srcFile 'config/debug/AndroidManifest.xml'
@@ -170,8 +171,8 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 27
         versionName "4.6.0"
 
         externalNativeBuild {
