--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,14 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sat Mar 12 05:53:50 MSK 2016
-RELEASE_KEY_PASSWORD=password
-RELEASE_KEY_ALIAS=alias
-RELEASE_STORE_PASSWORD=password
-android.useDeprecatedNdk=true
+#Mon Aug 07 13:29:48 CST 2017
+RELEASE_KEY_PASSWORD=android
+RELEASE_KEY_ALIAS=android
+RELEASE_STORE_PASSWORD=android
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=1080
 org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=4096m
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=false
 android.useAndroidX=true
-android.enableJetifier=true
